[gd_scene load_steps=31 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://UpgradeUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://art/Background.png" type="Texture" id=3]
[ext_resource path="res://art/noCard.png" type="Texture" id=4]
[ext_resource path="res://MainTheme.tres" type="Theme" id=5]
[ext_resource path="res://Camera2D.gd" type="Script" id=6]
[ext_resource path="res://art/Door.png" type="Texture" id=7]
[ext_resource path="res://Cupi.tscn" type="PackedScene" id=8]
[ext_resource path="res://Score.tscn" type="PackedScene" id=9]
[ext_resource path="res://art/HELP.png" type="Texture" id=10]
[ext_resource path="res://art/Excape.png" type="Texture" id=11]
[ext_resource path="res://art/ARrow.png" type="Texture" id=12]
[ext_resource path="res://ContinueButton.png" type="Texture" id=13]

[sub_resource type="CircleShape2D" id=8]
radius = 51.0882

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=10]
resource_name = "Wiggle"
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.25, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 0.55, 0.55 ), Vector2( 0.5, 0.5 ), Vector2( 0.55, 0.55 ), Vector2( 0.5, 0.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.25, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -7.0, 0.0, 7.0, 0.0 ]
}

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=12]
resource_name = "Wiggle"
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.25, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 0.55, 0.55 ), Vector2( 0.5, 0.5 ), Vector2( 0.55, 0.55 ), Vector2( 0.5, 0.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.25, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -7.0, 0.0, 7.0, 0.0 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 311.5, 169 )

[sub_resource type="Animation" id=5]
resource_name = "Door_close"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 80.0, 0.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Door_open"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 80.0 ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 454, 299 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Upgrade:percent_visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=13]
resource_name = "Upgrade!"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Upgrade:percent_visible")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=1]
resource_name = "Zoom_in"
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:zoom")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 4, 4 ), Vector2( 1.5, 1.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera2D:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 454, 0 ), Vector2( 31, 388 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Zoom_out"
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:zoom")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.5, 1.5 ), Vector2( 4, 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera2D:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 31, 388 ), Vector2( 454, 0 ) ]
}

[sub_resource type="ShaderMaterial" id=14]

[sub_resource type="StyleBoxTexture" id=16]
texture = ExtResource( 13 )
region_rect = Rect2( 0, 0, 620, 183 )
modulate_color = Color( 0.368627, 0.121569, 0.121569, 1 )

[sub_resource type="StyleBoxTexture" id=17]
texture = ExtResource( 13 )
region_rect = Rect2( 0, 0, 620, 183 )

[sub_resource type="StyleBoxTexture" id=15]
texture = ExtResource( 13 )
region_rect = Rect2( 0, 0, 620, 183 )
modulate_color = Color( 1, 0, 0, 1 )

[node name="Player" type="Node2D"]
position = Vector2( -1, 0 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1345, -1197 )
texture = ExtResource( 3 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="QuestionMark" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="QuestionMark"]
position = Vector2( -492, 74 )
shape = SubResource( 8 )

[node name="Sprite" type="Sprite" parent="QuestionMark"]
position = Vector2( -490, 72 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="QuestionMark"]
anims/RESET = SubResource( 9 )
anims/Wiggle = SubResource( 10 )

[node name="Quit" type="Area2D" parent="."]
position = Vector2( -104, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Quit"]
position = Vector2( -492, 74 )
shape = SubResource( 8 )

[node name="Sprite" type="Sprite" parent="Quit"]
position = Vector2( -490, 72 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 11 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Quit"]
anims/RESET = SubResource( 11 )
anims/Wiggle = SubResource( 12 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( -1345, -1197 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 2516.5, 436 )
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="Area2D"]
position = Vector2( 2511, 265 )
texture = ExtResource( 7 )
offset = Vector2( 5, 160 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Area2D"]
anims/Door_close = SubResource( 5 )
anims/Door_open = SubResource( 6 )
anims/RESET = SubResource( 7 )

[node name="NoCard" type="Sprite" parent="."]
position = Vector2( 0, 350 )
scale = Vector2( 0.42, 0.42 )
texture = ExtResource( 4 )

[node name="NoCard2" type="Sprite" parent="NoCard"]
position = Vector2( 476.19, 0 )
texture = ExtResource( 4 )
flip_v = true

[node name="NoCard3" type="Sprite" parent="NoCard"]
position = Vector2( -476.19, 0 )
texture = ExtResource( 4 )
flip_h = true

[node name="HandContainer" type="Node2D" parent="."]

[node name="BoardContainer" type="Node2D" parent="."]

[node name="Label8" type="Label" parent="."]
margin_left = -639.0
margin_top = 133.0
margin_right = -177.0
margin_bottom = 316.0
rect_scale = Vector2( 0.4, 0.4 )
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.462745, 0.462745, 0.462745, 1 )
custom_colors/font_color_shadow = Color( 0.462745, 0.462745, 0.462745, 1 )
text = "total
Score:"

[node name="TotalScore" type="Label" parent="."]
margin_left = -643.0
margin_top = 194.0
margin_right = -565.0
margin_bottom = 284.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.462745, 0.462745, 0.462745, 1 )
custom_colors/font_color_shadow = Color( 0.74902, 0.74902, 0.74902, 1 )
text = "00"

[node name="Upgrade" type="Label" parent="."]
modulate = Color( 1, 0, 0, 1 )
margin_left = -271.0
margin_top = 415.0
margin_right = 306.0
margin_bottom = 505.0
theme = ExtResource( 5 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "3 identical cards!"
percent_visible = 0.0

[node name="CurScore" type="Label" parent="."]
margin_left = 326.0
margin_top = 298.0
margin_right = 404.0
margin_bottom = 388.0
rect_scale = Vector2( 1.2, 1.2 )
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.498039, 0.498039, 0.498039, 0.305882 )
custom_colors/font_color_shadow = Color( 0.376471, 0.376471, 0.376471, 0.211765 )
text = "00"

[node name="BonusScore" type="Label" parent="."]
margin_left = 460.0
margin_top = 299.0
margin_right = 538.0
margin_bottom = 389.0
rect_scale = Vector2( 1.2, 1.2 )
theme = ExtResource( 5 )
custom_colors/font_color = Color( 1, 0, 0, 0.305882 )
custom_colors/font_color_shadow = Color( 0.376471, 0.376471, 0.376471, 0.211765 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 454, 299 )
current = true
script = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
anims/RESET = SubResource( 2 )
anims/Upgrade! = SubResource( 13 )
anims/Zoom_in = SubResource( 1 )
anims/Zoom_out = SubResource( 3 )

[node name="CUPID" parent="." instance=ExtResource( 8 )]
position = Vector2( -13, 749 )
scale = Vector2( 1.2, 1.2 )

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 0, 356 )

[node name="UpgradeUI" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( -1345, -1197 )

[node name="HELP" type="Node2D" parent="."]

[node name="NoCard" type="Sprite" parent="HELP"]
material = SubResource( 14 )
position = Vector2( 564, 121 )
scale = Vector2( 0.6, 0.5 )
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="HELP"]
margin_left = -92.0
margin_top = 439.0
margin_right = 248.0
margin_bottom = 529.0
rect_rotation = -1.0
rect_scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 5 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0, 0, 0.45098 )
text = "Your hand:"

[node name="Label2" type="Label" parent="HELP"]
margin_left = -297.0
margin_top = 25.6734
margin_right = 92.0
margin_bottom = 115.673
rect_scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 5 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0, 0, 0.45098 )
text = "Round's goal"

[node name="Label3" type="Label" parent="HELP"]
margin_left = 121.0
margin_top = 33.0
margin_right = 558.0
margin_bottom = 123.0
rect_scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 5 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0, 0, 0.45098 )
text = "Round's bonus"

[node name="Label4" type="Label" parent="HELP"]
margin_left = 438.0
margin_top = 318.0
margin_right = 900.0
margin_bottom = 501.0
rect_scale = Vector2( 0.4, 0.4 )
theme = ExtResource( 5 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0, 0, 0.45098 )
text = "current 
Score:"

[node name="Label7" type="Label" parent="HELP"]
margin_left = 469.0
margin_top = 77.0
margin_right = 931.0
margin_bottom = 260.0
rect_scale = Vector2( 0.4, 0.4 )
theme = ExtResource( 5 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0, 0, 0.45098 )
text = "Active
Bonuses"
align = 1
valign = 1

[node name="ARrow" type="Sprite" parent="HELP"]
position = Vector2( -68, 82.6734 )
rotation = 1.03117
scale = Vector2( 1.19605, 1.19644 )
texture = ExtResource( 12 )

[node name="Label5" type="Label" parent="HELP"]
margin_left = -596.0
margin_top = 400.673
margin_right = -183.0
margin_bottom = 490.673
rect_scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 5 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0, 0, 0.45098 )
text = "Card's points"

[node name="Label6" type="Label" parent="HELP"]
margin_left = -519.0
margin_top = 798.0
margin_right = -106.0
margin_bottom = 888.0
rect_scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 5 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0, 0, 0.45098 )
text = "Your Health"

[node name="ARrow3" type="Sprite" parent="HELP"]
position = Vector2( -359, 457.673 )
rotation = 1.03117
scale = Vector2( 1.19605, 1.19644 )
texture = ExtResource( 12 )

[node name="Label9" type="Label" parent="HELP"]
margin_left = -638.0
margin_top = 635.0
margin_right = -225.0
margin_bottom = 725.0
rect_rotation = 4.2273
rect_scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 5 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0, 0, 0.45098 )
text = "Card's bonus"

[node name="ARrow4" type="Sprite" parent="HELP"]
position = Vector2( -411, 652 )
rotation = 2.09676
scale = Vector2( 1.19605, 1.19644 )
texture = ExtResource( 12 )
flip_h = true

[node name="ARrow2" type="Sprite" parent="HELP"]
position = Vector2( 84, 82 )
rotation = 1.99643
scale = Vector2( 1.19605, 1.19644 )
texture = ExtResource( 12 )
flip_v = true

[node name="Score" parent="." instance=ExtResource( 9 )]
position = Vector2( -373, 769 )

[node name="PassiveContainer" type="Node2D" parent="."]
position = Vector2( 645, 65 )

[node name="IconText" type="Label" parent="PassiveContainer"]
margin_left = -284.0
margin_top = 102.0
margin_right = 316.0
margin_bottom = 402.0
rect_scale = Vector2( 0.5, 0.5 )
size_flags_horizontal = 2
theme = ExtResource( 5 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
align = 2
autowrap = true

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -1597.0
margin_top = -1264.0
margin_right = 2403.0
margin_bottom = 1736.0
color = Color( 1, 1, 1, 0.298039 )

[node name="Button" type="Button" parent="."]
margin_left = 1059.0
margin_top = -50.0
margin_right = 1683.0
margin_bottom = 150.0
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/normal = SubResource( 15 )

[node name="Label" type="Label" parent="."]
margin_left = -570.0
margin_top = -435.0
margin_right = 545.0
margin_bottom = -252.0
rect_scale = Vector2( 2, 2 )
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.462745, 0.462745, 0.462745, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "You have to
to help people with their break-ups"

[node name="Label2" type="Label" parent="."]
margin_left = 272.0
margin_top = -435.0
margin_right = 931.0
margin_bottom = -345.0
rect_scale = Vector2( 2, 2 )
theme = ExtResource( 5 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "play your cards right"

[node name="Label5" type="Label" parent="."]
visible = false
margin_left = -570.0
margin_top = -461.0
margin_right = 545.0
margin_bottom = -185.0
rect_scale = Vector2( 2, 2 )
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.462745, 0.462745, 0.462745, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Play 3 cards to help the customer;

and he will reward you!"

[node name="Label6" type="Label" parent="."]
visible = false
margin_left = -581.0
margin_top = -280.0
margin_right = 78.0
margin_bottom = -190.0
rect_scale = Vector2( 2, 2 )
theme = ExtResource( 5 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "And the customer is always right!"

[node name="Label3" type="Label" parent="."]
visible = false
margin_left = -570.0
margin_top = -435.0
margin_right = 545.0
margin_bottom = -252.0
rect_scale = Vector2( 2, 2 )
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.462745, 0.462745, 0.462745, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "3 identical cards combine to create
new cards!"

[node name="Label4" type="Label" parent="."]
visible = false
margin_left = -569.0
margin_top = -435.0
margin_right = 90.0
margin_bottom = -345.0
rect_scale = Vector2( 2, 2 )
theme = ExtResource( 5 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "3 identical cards"

[connection signal="mouse_entered" from="QuestionMark" to="." method="_on_QuestionMark_mouse_entered"]
[connection signal="mouse_exited" from="QuestionMark" to="." method="_on_QuestionMark_mouse_exited"]
[connection signal="input_event" from="Quit" to="." method="_on_Quit_input_event"]
[connection signal="mouse_entered" from="Quit" to="." method="_on_Quit_mouse_entered"]
[connection signal="mouse_exited" from="Quit" to="." method="_on_Quit_mouse_exited"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
